--- a/src/containers/AddCameraContainer/styles.css
+++ b/src/containers/AddCameraContainer/styles.css
@@ -11,3 +11,17 @@
   align-items: center;
   background-color: rgba(0, 0, 0, .7);
 }
+
+.formCamera {
+  flex-direction: column;
+}
+
+#lineCamera {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+#hostAddress {
+  margin-right: 20px;
+}
